[gd_scene load_steps=11 format=2]

[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/start_menu.gd" type="Script" id=2]
[ext_resource path="res://scripts/state_button.gd" type="Script" id=3]
[ext_resource path="res://bgm/押尾コータロー - えんぴつと五線譜.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0.929412, 0.94902, 0.372549, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "The Ball"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="single_start" type="Button" parent="."]
margin_left = 750.0
margin_top = 200.0
margin_right = 950.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 2 )
text = "Single"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="double_start" type="Button" parent="."]
margin_left = 750.0
margin_top = 298.772
margin_right = 950.0
margin_bottom = 348.772
custom_fonts/font = SubResource( 3 )
text = "Double"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stage1_start" type="Button" parent="."]
margin_left = -200.0
margin_top = 200.0
margin_right = -50.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 4 )
text = "stage 1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="stage1_start"]
wait_time = 0.1
one_shot = true

[node name="stage2_start" type="Button" parent="."]
margin_left = -200.0
margin_top = 300.0
margin_right = -49.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 5 )
text = "stage 2"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="stage2_start"]
wait_time = 0.4
one_shot = true

[node name="quit" type="Button" parent="."]
margin_left = 750.0
margin_top = 400.0
margin_right = 950.0
margin_bottom = 454.0
custom_fonts/font = SubResource( 6 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgm_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="single_start" to="." method="_on_single_start_pressed"]
[connection signal="pressed" from="double_start" to="." method="_on_double_start_pressed"]
[connection signal="pressed" from="stage1_start" to="." method="_on_stage1_start_pressed"]
[connection signal="timeout" from="stage1_start/Timer" to="stage1_start" method="_on_Timer_timeout"]
[connection signal="timeout" from="stage2_start/Timer" to="stage2_start" method="_on_Timer_timeout"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
